# midi2piousbhub

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  ble_midi_manager.cpp  ble_midi_manager.h  ble_midi_manager_cli.cpp  ble_midi_manager_cli.h  ble_midi_profile.gatt  btstack_config.h  midi2piousbhub.cpp  midi2piousbhub.h  midi2piousbhub_cli.cpp  midi2piousbhub_cli.h  pico_fatfs_cli.cpp  pico_lfs_cli.cpp  preset_manager.cpp  preset_manager.h  preset_manager_cli.cpp  ring_buffer_lib_config.h  tusb_config.h  usb_descriptors.c
